fix scrollbar and drop note with description

--- a/todo-frontend/src/index.css
+++ b/todo-frontend/src/index.css
@@ -13,8 +13,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+
 * {
   box-sizing: border-box;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 a {
